tests/ui/or-patterns/exhaustiveness-non-exhaustive.stderr
error[E0004]: non-exhaustive patterns: `(2_u8..=u8::MAX, _)` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:5:11
   |
LL |     match (0u8, 0u8) {
   |           ^^^^^^^^^^ pattern `(2_u8..=u8::MAX, _)` not covered
   |
   = note: the matched value is of type `(u8, u8)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         (0 | 1, 2 | 3) => {},
LL +         (2_u8..=u8::MAX, _) => todo!()
   |

error[E0004]: non-exhaustive patterns: `((4_u8..=u8::MAX,),)` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:9:11
   |
LL |     match ((0u8,),) {
   |           ^^^^^^^^^ pattern `((4_u8..=u8::MAX,),)` not covered
   |
   = note: the matched value is of type `((u8,),)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         ((0 | 1,) | (2 | 3,),) => {},
LL +         ((4_u8..=u8::MAX,),) => todo!()
   |

error[E0004]: non-exhaustive patterns: `(Some(2_u8..=u8::MAX),)` not covered
  --> $DIR/exhaustiveness-non-exhaustive.rs:13:11
   |
LL |     match (Some(0u8),) {
   |           ^^^^^^^^^^^^ pattern `(Some(2_u8..=u8::MAX),)` not covered
   |
   = note: the matched value is of type `(Option<u8>,)`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
LL ~         (None | Some(0 | 1),) => {},
LL +         (Some(2_u8..=u8::MAX),) => todo!()
   |

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0004`.
